--- a/style.css
+++ b/style.css
@@ -12,18 +12,41 @@ body {
   padding: 10px;
 }
 
-header, 
+.companyheader {
+  color: white;
+  background-color: black;
+  border-radius: 5px;
+  padding: 10px;
+}
+
+.companyheader #logo {
+  float: left;
+}
+
+.companyheader ul {
+  display: flex;
+  font-size: 14pt;
+  font-weight: 700;
+  margin: 0;
+  padding: 0 20px;
+}
+
+.companyheader li {
+  line-height: 48px;
+  list-style: none;
+  text-transform: lowercase;
+}
+
+main {
+  clear: both;
+  padding: 20px;
+}
+
 footer {
   padding: 20px 20px;
   background-color: black;
   color: white;
   border-radius: 5px;
-}
-
-#logoname {
-  padding-left: 10px;
-  font-size: x-large;
-  text-transform: lowercase;
 }
 
 footer  {
