--- a/style.css
+++ b/style.css
@@ -53,11 +53,12 @@ footer  {
   text-align: right;
 }
 
-.button img {
+.button {
   background-color: black;
 }
 
-.button a :hover,
-.button a :focus {
+.button :hover,
+.button :focus {
+  border-radius: 5px;
   background-color: gray;
 }
