--- a/style.css
+++ b/style.css
@@ -53,12 +53,11 @@ footer  {
   text-align: right;
 }
 
-.button {
-  background-color: black;
+.button img {
+  background-color: white;
 }
 
 .button :hover,
 .button :focus {
-  border-radius: 5px;
   background-color: gray;
 }
